<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ebk.batusrs.InfoFragment">

    <TextView
        android:id="@+id/infoTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/info_title" />
    <TextView
        android:id="@+id/infoIntroHeaderTextView"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_introduction_header" />
    <TextView
        android:id="@+id/infoIntroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_introduction" />
    <TextView
        android:id="@+id/infoScheduleHeaderTextView"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_schedule_header" />
    <TextView
        android:id="@+id/infoScheduleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_schedule" />
    <TextView
        android:id="@+id/infoLevelHeaderTextView"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_level_header" />
    <TextView
        android:id="@+id/infoLevelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_level" />
</LinearLayout>
